# Vulkan-Engine

./: .gitignore  CMakeLists.txt
Assets/models/Racetrack1/: track.mtl
Assets/models/Racetrack2/: track2.blend1  track2.mtl
Engine/: button.cpp  debugDrawer.cpp  descriptorManager.cpp  engine.cpp  engineUI.cpp  externalImpl.cpp  mesh.cpp  pipelineManager.cpp  primitives.cpp  renderCommands.cpp  renderer.cpp  serializationUtils.cpp  square.cpp  swapchainManager.cpp  text.cpp  textureManager.cpp  utils.cpp
Include/: ECSRegistry.hpp  UI.hpp  animatedMesh.hpp  button.hpp  camera.h  components.hpp  debugDrawer.hpp  engine.hpp  engineUI.hpp  gameObject.hpp  mesh.hpp  noImage.hpp  particleEmitter.hpp  physicsSystem.hpp  primitives.hpp  renderCommands.hpp  renderer.hpp  serializationManager.hpp  serializationUtils.hpp  square.hpp  text.hpp  utils.h  vertex.h
Include/Vulkan/: bufferManager.hpp  descriptorManager.hpp  deviceManager.hpp  pipelineManager.hpp  swapchainManager.hpp  textureManager.hpp
Test/: main.cpp
models/Racetrack1/: untitled.blend  untitled.blend1
models/Racetrack2/: track2.blend
models/Racetrack3/: racetrack3.mtl  untitled.blend  untitled2.blend  untitled2.blend1
models/animationMan/: man.gltf
models/car/: 1.mtl
models/couch/: couch1.mtl
models/gltfMan/: scene.gltf
shaders/: aminatedVert.spv  animShader.vert  compile.bat  compute.spv  frag.spv  fragColorID.spv  shader.comp  shader.frag  shader.vert  shaderColorID.frag  shaderColorID.vert  vert.spv  vertColorID.spv
src/: animatedMesh.cpp  bufferManager.cpp  button.cpp  debugDrawer.cpp  descriptorManager.cpp  deviceManager.cpp  engine.cpp  engineUI.cpp  gameObject.cpp  main.cpp  mesh.cpp  particleEmitter.cpp  physicsSystem.cpp  pipelineManager.cpp  renderCommands.cpp  renderer.cpp  serializationUtils.cpp  square.cpp  text.cpp  textureManager.cpp  utils.cpp
(+2 files in other folders)
